traffic-mirroring/04-gateway.yaml
##############################################################################
# GatewayClass
##############################################################################
apiVersion: gateway.networking.k8s.io/v1
kind: GatewayClass
metadata:
  name: ab-demo-gwclass
  labels:
    app.kubernetes.io/part-of: ab-demo
spec:
  controllerName: gateway.envoyproxy.io/gatewayclass-controller
  description: "GatewayClass for the traffic shadow demo"
---
##############################################################################
# Gateway
##############################################################################
apiVersion: gateway.networking.k8s.io/v1
kind: Gateway
metadata:
  name: ab-demo-gateway
  namespace: ab-demo
  labels:
    app.kubernetes.io/name: ab-demo-gateway
    app.kubernetes.io/component: gateway
    app.kubernetes.io/part-of: ab-demo
spec:
  gatewayClassName: ab-demo-gwclass
  listeners:
    - name: http
      protocol: HTTP
      port: 80
      allowedRoutes:
        namespaces:
          from: Same
